--- a/assignment 3/assignment_3.tex
+++ b/assignment 3/assignment_3.tex
@@ -101,7 +101,7 @@ Program solution:
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.7\linewidth]{img/easy.png}
-\caption{\label{fig:easy}Program's solution for board A}
+\caption{\label{fig:easy}Program's solution for Easy board}
 \end{figure}
 
 As shown in figure \ref{fig:easy}, the function backtrack is called 1 time, and it never fails.
@@ -120,7 +120,7 @@ Program solution:
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.7\linewidth]{img/medium.png}
-\caption{\label{fig:medium}Program's solution for board A}
+\caption{\label{fig:medium}Program's solution for Medium board}
 \end{figure}
 As shown in figure \ref{fig:medium}, the \texttt{backtrack} function is called 2 times, and it never fails.
 
